fix: bug llevar armadura
Los penalizadores por llevar armadura se estaban aplicando de manera incorrecta. Se ha corregido el cálculo del penalizador natural y se ha separado en penalizador natural, modificador a acciones físicas y penalizador a la percepción (en caso de los cascos)

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -61,7 +61,9 @@
   "anima.ui.combat.armors.movementRestriction.final.title": "Restr. Movim.",
   "anima.ui.combat.armors.name.title": "Nombre",
   "anima.ui.combat.armors.naturalPenalty.base.title": "Pen. natural base",
+  "anima.ui.combat.armors.perceptionPenalty.base.title": "Pen. percep. base",
   "anima.ui.combat.armors.naturalPenalty.title": "Pen. natural",
+  "anima.ui.combat.armors.perceptionPenalty.title": "Pen. percep.",
   "anima.ui.combat.armors.presence.base.title": "Presencia base",
   "anima.ui.combat.armors.presence.title": "Presencia",
   "anima.ui.combat.armors.quality.title": "Calidad",
@@ -196,6 +198,7 @@
   "anima.ui.general.movement.running.title": "Corriendo",
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
+  "anima.ui.general.perceptionPenalty.title": "Pen. Percep.",
   "anima.ui.general.presence.title": "Presencia",
   "anima.ui.general.regeneration.all.title": "Todos",
   "anima.ui.general.regeneration.penaltyReduction.title": "Reducción de Negativos",
