--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -61,7 +61,9 @@
   "anima.ui.combat.armors.movementRestriction.final.title": "Restrict. Movem.",
   "anima.ui.combat.armors.name.title": "Nom",
   "anima.ui.combat.armors.naturalPenalty.base.title": "Base de Malus naturel",
+  "anima.ui.combat.armors.perceptionPenalty.base.title": "Pen. percep. base",
   "anima.ui.combat.armors.naturalPenalty.title": "Malus Naturel",
+  "anima.ui.combat.armors.perceptionPenalty.title": "Pen. percep.",
   "anima.ui.combat.armors.presence.base.title": "Présence de Base",
   "anima.ui.combat.armors.presence.title": "Présence",
   "anima.ui.combat.armors.quality.title": "Qualité",
@@ -196,6 +198,7 @@
   "anima.ui.general.movement.running.title": "Course",
   "anima.ui.general.movementType.title": "Type Mov.",
   "anima.ui.general.naturalPenalty.title": "Malus Naturel",
+  "anima.ui.general.perceptionPenalty.title": "Pen. Percep.",
   "anima.ui.general.presence.title": "Présence",
   "anima.ui.general.regeneration.all.title": "Todos",
   "anima.ui.general.regeneration.penaltyReduction.title": "Réduction des négatifs",
