--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -61,7 +61,9 @@
   "anima.ui.combat.armors.movementRestriction.final.title": "Movem. Restrict.",
   "anima.ui.combat.armors.name.title": "Name",
   "anima.ui.combat.armors.naturalPenalty.base.title": "Base natural pen.",
+  "anima.ui.combat.armors.perceptionPenalty.base.title": "Pen. percep. base",
   "anima.ui.combat.armors.naturalPenalty.title": "Natural pen.",
+  "anima.ui.combat.armors.perceptionPenalty.title": "Pen. percep.",
   "anima.ui.combat.armors.presence.base.title": "Base presence",
   "anima.ui.combat.armors.presence.title": "Presence",
   "anima.ui.combat.armors.quality.title": "Quality",
@@ -196,6 +198,7 @@
   "anima.ui.general.movement.running.title": "Running",
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
+  "anima.ui.general.perceptionPenalty.title": "Pen. Percep.",
   "anima.ui.general.presence.title": "Presence",
   "anima.ui.general.regeneration.all.title": "Todos",
   "anima.ui.general.regeneration.penaltyReduction.title": "Penalty Reduction",
