--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -274,9 +274,18 @@
   "anima.ui.mystic.metamagic.grade.title": "Grado",
   "anima.ui.mystic.metamagic.name.title": "Metamagia",
   "anima.ui.mystic.metamagic.title": "Metamagias",
+  "anima.ui.mystic.preparedSpells.prepared.title": "Preparado ?",
+  "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acc",
+  "anima.ui.mystic.preparedSpells.grade.title": "Grado",
+  "anima.ui.mystic.preparedSpells.name.title": "Conjuro",
+  "anima.ui.mystic.preparedSpells.title": "Conjuros preparados",
   "anima.ui.mystic.selectedSpells.cost.title": "Coste",
   "anima.ui.mystic.selectedSpells.name.title": "Conjuro",
   "anima.ui.mystic.selectedSpells.title": "Conjuros seleccionados",
+  "anima.ui.mystic.spell.combatType.none.title": "-",
+  "anima.ui.mystic.spell.combatType.attack.title": "Ataque",
+  "anima.ui.mystic.spell.combatType.defense.title": "Defensa",
+  "anima.ui.mystic.spell.combatType.title": "Combate",
   "anima.ui.mystic.spell.actionType.active.title": "Activo",
   "anima.ui.mystic.spell.actionType.passive.title": "Pasivo",
   "anima.ui.mystic.spell.actionType.title": "Acción",
@@ -362,8 +371,9 @@
   "anima.ui.psychic.psychicPotential.title": "Potencial Psíquico",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Activo",
   "anima.ui.psychic.psychicPowers.actionType.passive.title": "Pasivo",
-  "anima.ui.psychic.psychicPowers.actionType.attack.title": "Ataque",
-  "anima.ui.psychic.psychicPowers.actionType.defense.title": "Defensa",
+  "anima.ui.psychic.psychicPowers.combatType.none.title": "-",
+  "anima.ui.psychic.psychicPowers.combatType.attack.title": "Ataque",
+  "anima.ui.psychic.psychicPowers.combatType.defense.title": "Defensa",
   "anima.ui.psychic.psychicPowers.discipline.telepathy.title": "Telepatía",
   "anima.ui.psychic.psychicPowers.discipline.telekenisis.title": "Telequinesis",
   "anima.ui.psychic.psychicPowers.discipline.pyrokinesis.title": "Piroquinesis",
@@ -373,11 +383,12 @@
   "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Telemetría",
   "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sentiente",
   "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
-  "anima.ui.psychic.psychicPowers.power.footer.actionType.title": "Acción",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
   "anima.ui.psychic.psychicPowers.power.footer.critic.title": "Crítico",
+  "anima.ui.psychic.psychicPowers.power.header.combatType.title": "Combate",
+  "anima.ui.psychic.psychicPowers.power.header.actionType.title": "Acción",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Nivel",
   "anima.ui.psychic.psychicPowers.power.header.discipline.title": "Disc.",
   "anima.ui.psychic.psychicPowers.power.header.macro.title": "Macro",
@@ -539,6 +550,7 @@
   "dialogs.items.psychicPower.content": "Nombre del poder psíquico",
   "dialogs.items.secondarySkill.content": "Nombre de la habilidad",
   "dialogs.items.selectedSpell.content": "Nombre del conjuro seleccionado",
+  "dialogs.items.preparedSpell.content": "Nombre del conjuro preparado",
   "dialogs.items.specialSkill.content": "Nombre de la habilidad especial o tabla",
   "dialogs.items.spell.content": "Nombre del hechizo",
   "dialogs.items.spellMaintenance.content": "Nombre del conjuro mantenido",
@@ -571,8 +583,11 @@
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "Esta opción enviara una tirada de resistencia",
+  "macros.combat.dialog.zeonAccumulated.title": "Zeon acumulado",
+  "macros.combat.dialog.castInnate.title": "Lanzar conjuro innato",
+  "macros.combat.dialog.castPrepared.title": "Lanzar conjuro preparado",
   "macros.combat.dialog.critic.title": "Crítico",
-  "macros.combat.dialog.damage.title": "Daño",
+  "macros.combat.dialog.damage.title": "Modificador del daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
   "macros.combat.dialog.defend.title": "Defensa",
   "macros.combat.dialog.defender.title": "Defensor",
