--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -359,9 +359,9 @@
   "anima.ui.psychic.psychicPotential.title": "Talent Psychique",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
   "anima.ui.psychic.psychicPowers.actionType.passive.title": "Passive",
-  "anima.ui.psychic.psychicPowers.power.footer.actionType.title": "Action",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
+  "anima.ui.psychic.psychicPowers.power.header.actionType.title": "Action",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Niveau",
   "anima.ui.psychic.psychicPowers.title": "Pouvoirs Psychiques",
   "anima.ui.psychic.psychicProjection.projection.title": "Projection",
@@ -546,7 +546,7 @@
   "macros.combat.dialog.counterAttackButton.title": "Countre-attaque",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Cette option déclenche une nouvelle attaque du défenseur",
   "macros.combat.dialog.critic.title": "Critique",
-  "macros.combat.dialog.damage.title": "Dégâts",
+  "macros.combat.dialog.damage.title": "Dégâts Modificateur",
   "macros.combat.dialog.damageDeal.title": "Dégâts faits",
   "macros.combat.dialog.defend.title": "Défense",
   "macros.combat.dialog.defender.title": "Défenseur",
