--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -274,9 +274,18 @@
   "anima.ui.mystic.metamagic.grade.title": "Grade",
   "anima.ui.mystic.metamagic.name.title": "Metamagic",
   "anima.ui.mystic.metamagic.title": "Metamagics",
+  "anima.ui.mystic.preparedSpells.prepared.title": "Prepared ?",
+  "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acc",
+  "anima.ui.mystic.preparedSpells.grade.title": "Grade",
+  "anima.ui.mystic.preparedSpells.name.title": "Spell",
+  "anima.ui.mystic.preparedSpells.title": "Prepared spells",
   "anima.ui.mystic.selectedSpells.cost.title": "Cost",
   "anima.ui.mystic.selectedSpells.name.title": "Spell",
   "anima.ui.mystic.selectedSpells.title": "Selected spells",
+  "anima.ui.mystic.spell.combatType.none.title": "-",
+  "anima.ui.mystic.spell.combatType.attack.title": "Attack",
+  "anima.ui.mystic.spell.combatType.defense.title": "Defense",
+  "anima.ui.mystic.spell.combatType.title": "Combat",
   "anima.ui.mystic.spell.actionType.active.title": "Active",
   "anima.ui.mystic.spell.actionType.passive.title": "Passive",
   "anima.ui.mystic.spell.actionType.title": "Action",
@@ -362,8 +371,9 @@
   "anima.ui.psychic.psychicPotential.title": "Psychic potential",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
   "anima.ui.psychic.psychicPowers.actionType.passive.title": "Passive",
-  "anima.ui.psychic.psychicPowers.actionType.attack.title": "Attack",
-  "anima.ui.psychic.psychicPowers.actionType.defense.title": "Defense",
+  "anima.ui.psychic.psychicPowers.combatType.none.title": "-",
+  "anima.ui.psychic.psychicPowers.combatType.attack.title": "Attack",
+  "anima.ui.psychic.psychicPowers.combatType.defense.title": "Defense",
   "anima.ui.psychic.psychicPowers.discipline.telepathy.title": "Telepathy",
   "anima.ui.psychic.psychicPowers.discipline.telekenisis.title": "Telekenisis",
   "anima.ui.psychic.psychicPowers.discipline.pyrokinesis.title": "Pyrokinesis",
@@ -373,11 +383,12 @@
   "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Telemetry",
   "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sentient",
   "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
-  "anima.ui.psychic.psychicPowers.power.footer.actionType.title": "Action",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
   "anima.ui.psychic.psychicPowers.power.footer.critic.title": "Critic",
+  "anima.ui.psychic.psychicPowers.power.header.combatType.title": "Combat",
+  "anima.ui.psychic.psychicPowers.power.header.actionType.title": "Action",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Level",
   "anima.ui.psychic.psychicPowers.power.header.discipline.title": "Dis.",
   "anima.ui.psychic.psychicPowers.power.header.macro.title": "Macro",
@@ -539,6 +550,7 @@
   "dialogs.items.psychicPower.content": "Psychic power name",
   "dialogs.items.secondarySkill.content": "Skill name",
   "dialogs.items.selectedSpell.content": "Selected spell name",
+  "dialogs.items.preparedSpell.content": "Prepared spell name",
   "dialogs.items.specialSkill.content": "Special skill or table name",
   "dialogs.items.spell.content": "Spell name",
   "dialogs.items.spellMaintenance.content": "Maintained spell name",
@@ -573,8 +585,11 @@
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "This option will execute a new roll from the defender",
+  "macros.combat.dialog.zeonAccumulated.title": "Zeon accumulated",
+  "macros.combat.dialog.castInnate.title": "Cast innate spell",
+  "macros.combat.dialog.castPrepared.title": "Cast prepared spell",
   "macros.combat.dialog.critic.title": "Critic",
-  "macros.combat.dialog.damage.title": "Damage",
+  "macros.combat.dialog.damage.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
   "macros.combat.dialog.defend.title": "Defense",
   "macros.combat.dialog.defender.title": "Defender",
