automate-combat-distance-settings

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -500,6 +500,8 @@
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Mostrar tiradas del GM forma automática al combatir",
   "anima.ui.systemSettings.useCombatTable.title": "Usar la Tabla de combate",
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calcular daño usando la Tabla de combate que aparece en el Core Exxet pg. 334-335",
+  "anima.ui.systemSettings.useDistanceAutomation.title": "Automatizar distancia en el combate",
+  "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calcula la distancia entre el atacante y el defensor para agregar de forma automática los modificadores correspondiente al combate a distancia",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
@@ -635,6 +637,7 @@
   "macros.combat.dialog.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.highGround.title": "Terreno elevado",
+  "macros.combat.dialog.distance.title": "Bocajarro",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
   "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
