--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -499,6 +499,8 @@
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Show GM rolls automatically in combat",
   "anima.ui.systemSettings.useCombatTable.title": "Use combat table",
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calculate damage with the Combat Table explained in Core Exxet pg. 334-335",
+  "anima.ui.systemSettings.useDistanceAutomation.title": "Automate combat distance",
+  "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calculates the distance between the attacker and defender to automatically add modifiers for ranged combat",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
@@ -635,6 +637,7 @@
   "macros.combat.dialog.poorVisibility.title": "Poor visibility",
   "macros.combat.dialog.targetInCover.title": "Target in Cover",
   "macros.combat.dialog.highGround.title": "High ground",
+  "macros.combat.dialog.distance.title": "Point blank",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
   "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
