psychic-damage-title

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -591,7 +591,8 @@
   "macros.combat.dialog.castInnate.title": "Cast innate spell",
   "macros.combat.dialog.castPrepared.title": "Cast prepared spell",
   "macros.combat.dialog.critic.title": "Critic",
-  "macros.combat.dialog.damage.title": "Damage modifier",
+  "macros.combat.dialog.damage.title": "Damage",
+  "macros.combat.dialog.psychic.damage.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
   "macros.combat.dialog.defend.title": "Defense",
   "macros.combat.dialog.defender.title": "Defender",
