--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -589,7 +589,8 @@
   "macros.combat.dialog.castInnate.title": "Lanzar conjuro innato",
   "macros.combat.dialog.castPrepared.title": "Lanzar conjuro preparado",
   "macros.combat.dialog.critic.title": "Crítico",
-  "macros.combat.dialog.damage.title": "Modificador del daño",
+  "macros.combat.dialog.damage.title": "Daño",
+  "macros.combat.dialog.psychic.damage.title": "Modificador al daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
   "macros.combat.dialog.defend.title": "Defensa",
   "macros.combat.dialog.defender.title": "Defensor",
