supernatural-shields-automation

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -274,6 +274,9 @@
   "anima.ui.mystic.metamagic.grade.title": "Grado",
   "anima.ui.mystic.metamagic.name.title": "Metamagia",
   "anima.ui.mystic.metamagic.title": "Metamagias",
+  "anima.ui.mystic.mysticShields.value.title": "Puntos de vida",
+  "anima.ui.mystic.mysticShields.name.title": "Escudo",
+  "anima.ui.mystic.mysticShields.title": "Escudos Sobrenaturales",
   "anima.ui.mystic.preparedSpells.prepared.title": "Preparado ?",
   "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acc",
   "anima.ui.mystic.preparedSpells.grade.title": "Grado",
@@ -365,6 +368,9 @@
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalizador",
   "anima.ui.psychic.mentalPattern.title": "Patrones Mentales",
   "anima.ui.psychic.psychicDiscipline.title": "Disciplinas Psíquicas",
+  "anima.ui.psychic.psychicShields.shieldPoints.title": "Puntos de vida",
+  "anima.ui.psychic.psychicShields.name.title": "Escudo",
+  "anima.ui.psychic.psychicShields.title": "Escudos Sobrenaturales",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "CV",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
@@ -553,6 +559,8 @@
   "dialogs.items.secondarySkill.content": "Nombre de la habilidad",
   "dialogs.items.selectedSpell.content": "Nombre del conjuro seleccionado",
   "dialogs.items.preparedSpell.content": "Nombre del conjuro preparado",
+  "dialogs.items.mysticShield.content": "Nombre del escudo sobrenatural",
+  "dialogs.items.psychicShield.content": "Nombre del escudo sobrenatural",
   "dialogs.items.specialSkill.content": "Nombre de la habilidad especial o tabla",
   "dialogs.items.spell.content": "Nombre del hechizo",
   "dialogs.items.spellMaintenance.content": "Nombre del conjuro mantenido",
@@ -648,7 +656,11 @@
   "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
   "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
+  "macros.combat.dialog.psychicPotentialFatigue.title": "Potencial Psíquico falla pierdes {fatiguePen} puntos de Fatiga",
   "macros.combat.dialog.psychicPower.title": "Poder psíquico",
+  "macros.combat.dialog.psychicShield.title": "Escudo psíquico",
+  "macros.combat.dialog.shieldValue.title": "Puntos de vida",
+  "macros.combat.dialog.newShield.title": "¿Escudo nuevo?",
   "macros.combat.dialog.psychicProjection.title": "Proyección psíquica",
   "macros.combat.dialog.requestPermission.title": " te ha enviado una petición de ataque hacia ",
   "macros.combat.dialog.rolled.title": "Tirada del dado",
@@ -657,6 +669,7 @@
   "macros.combat.dialog.combat.accumulateDefenses.title": "Acumular defensa",
   "macros.combat.dialog.surprised.title": "Sorprendido",
   "macros.combat.dialog.spell.title": "Hechizo",
+  "macros.combat.dialog.mysticShield.title": "Escudo místico",
   "macros.combat.dialog.spellGrade.advanced.title": "Avanzado",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcano",
   "macros.combat.dialog.spellGrade.base.title": "Base",
