--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -274,6 +274,9 @@
   "anima.ui.mystic.metamagic.grade.title": "Grade",
   "anima.ui.mystic.metamagic.name.title": "Metamagic",
   "anima.ui.mystic.metamagic.title": "Metamagics",
+  "anima.ui.mystic.mysticShields.value.title": "Life points",
+  "anima.ui.mystic.mysticShields.name.title": "Shield",
+  "anima.ui.mystic.mysticShields..title": "Supernatural shields",
   "anima.ui.mystic.preparedSpells.prepared.title": "Prepared ?",
   "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acc",
   "anima.ui.mystic.preparedSpells.grade.title": "Grade",
@@ -365,6 +368,9 @@
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalty",
   "anima.ui.psychic.mentalPattern.title": "Mental Patterns",
   "anima.ui.psychic.psychicDiscipline.title": "Psychic Disciplines",
+  "anima.ui.psychic.psychicShields.shieldPoints.title": "Life points",
+  "anima.ui.psychic.psychicShields.name.title": "Shield",
+  "anima.ui.psychic.psychicShields.title": "Supernatural shields",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "PP",
   "anima.ui.psychic.psychicPotential.potential.title": "Potential",
@@ -553,6 +559,8 @@
   "dialogs.items.secondarySkill.content": "Skill name",
   "dialogs.items.selectedSpell.content": "Selected spell name",
   "dialogs.items.preparedSpell.content": "Prepared spell name",
+  "dialogs.items.mysticShield.content": "Supernatural shield name",
+  "dialogs.items.psychicShield.content": "Supernatural shield name",
   "dialogs.items.specialSkill.content": "Special skill or table name",
   "dialogs.items.spell.content": "Spell name",
   "dialogs.items.spellMaintenance.content": "Maintained spell name",
@@ -648,7 +656,11 @@
   "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target} with {potential} potential",
   "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
+  "macros.combat.dialog.psychicPotentialFatigue.title": "Psychic potential fails loses {fatiguePen} Fatigue points",
   "macros.combat.dialog.psychicPower.title": "Psychic power",
+  "macros.combat.dialog.psychicShield.title": "Psychic shield",
+  "macros.combat.dialog.shieldValue.title": "Life points",
+  "macros.combat.dialog.newShield.title": "New shield?",
   "macros.combat.dialog.psychicProjection.title": "Psychic projection",
   "macros.combat.dialog.requestPermission.title": " requests permission to attack ",
   "macros.combat.dialog.rolled.title": "Dice rolled",
@@ -657,6 +669,7 @@
   "macros.combat.dialog.combat.accumulateDefenses.title": "Accumulate defense",
   "macros.combat.dialog.surprised.title": "Surprised",
   "macros.combat.dialog.spell.title": "Spell",
+  "macros.combat.dialog.mysticShield.title": "Mystic shield",
   "macros.combat.dialog.spellGrade.advanced.title": "Advanced",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcane",
   "macros.combat.dialog.spellGrade.base.title": "Base",
