--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -337,6 +337,7 @@
   "anima.ui.mystic.summoning.title": "Summoning",
   "anima.ui.mystic.tabs.main": "Main",
   "anima.ui.mystic.tabs.secondaries": "Spells",
+	"anima.ui.mystic.tabs.invocations": "Invocaciones",
   "anima.ui.mystic.zeon.accumulated.title": "Accumulated",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
