--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -351,6 +351,7 @@
 	"anima.ui.mystic.summoning.title": "Convocación",
 	"anima.ui.mystic.tabs.main": "Principal",
 	"anima.ui.mystic.tabs.secondaries": "Conjuros",
+	"anima.ui.mystic.tabs.invocations": "Invocaciones",
 	"anima.ui.mystic.zeon.accumulated.title": "Acumulado",
 	"anima.ui.mystic.zeon.final.title": "Final",
 	"anima.ui.mystic.zeon.title": "Zeon",
