UPDATED - Weapon & armor data

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -19,6 +19,7 @@
   "anima.ui.characteristics.power": "Power",
   "anima.ui.characteristics.strength": "Strength",
   "anima.ui.characteristics.willPower": "Willpower",
+  "anima.ui.characteristics.none": "-",
   "anima.ui.combat.ammo.amount.title": "Amount",
   "anima.ui.combat.ammo.breaking.base.title": "Base breaking",
   "anima.ui.combat.ammo.breaking.title": "Breaking",
@@ -74,12 +75,16 @@
   "anima.ui.combat.armors.type.title": "Type",
   "anima.ui.combat.armors.wearArmorRequirement.base.title": "Wear Armor Requ. Base",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Wear Armor Requ.",
+	"anima.ui.combat.armors.isInmodifiable.title": "¿Es Inmodificable?",
   "anima.ui.combat.baseValues.attack.title": "Attack",
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
   "anima.ui.combat.baseValues.extraDamage.title": "Extra damage",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
+  "anima.ui.combat.baseValues.incomingDamageReduction.title": "Reducción de Daño",
+	"anima.ui.combat.baseValues.extraArmor.title": "TAs extra",
+	"anima.ui.combat.baseValues.extraReducedArmor.title": "TAs reducidas extra",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.combat.combatTables.title": "Combat tables",
   "anima.ui.combat.finalArmor.title": "Final armor",
@@ -133,6 +138,13 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2H STR req.",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.combat.weapons.weaponStrength.title": "Weapon STR",
+	"anima.ui.combat.weapon.damageCalculation.title": "Cálculo daño base",
+	"anima.ui.combat.weapon.attribute.title": "Característica",
+	"anima.ui.combat.weapon.baseDamageCalculationType.default.title": "Por defecto",
+	"anima.ui.combat.weapon.baseDamageCalculationType.presence.title": "Presencia",
+	"anima.ui.combat.weapon.baseDamageCalculationType.doublePresence.title": "Doble de Presencia",
+	"anima.ui.combat.weapons.extraReducedArmor.title": "Reducción de TA extra",
+	"anima.ui.combat.weapons.ignoreArmor.title": "Ignora armadura",
   "anima.ui.contactSection.contactRow.description": "Description",
   "anima.ui.contactSection.contactRow.name": "Name",
   "anima.ui.contactSection.title": "Contacts",
