--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -19,6 +19,7 @@
   "anima.ui.characteristics.power": "Poder",
   "anima.ui.characteristics.strength": "Fuerza",
   "anima.ui.characteristics.willPower": "Voluntad",
+  "anima.ui.characteristics.none": "-",
   "anima.ui.combat.ammo.amount.title": "Cantidad",
   "anima.ui.combat.ammo.breaking.base.title": "Rotura base",
   "anima.ui.combat.ammo.breaking.title": "Rotura",
@@ -74,12 +75,16 @@
   "anima.ui.combat.armors.type.title": "Tipo",
   "anima.ui.combat.armors.wearArmorRequirement.base.title": "Req. Llevar Armadura Base",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Req. Llevar Armadura",
+	"anima.ui.combat.armors.isInmodifiable.title": "¿Es Inmodificable?",
   "anima.ui.combat.baseValues.attack.title": "Ataque",
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.extraDamage.title": "Daño extra",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
+  "anima.ui.combat.baseValues.incomingDamageReduction.title": "Reducción de Daño",
+	"anima.ui.combat.baseValues.extraArmor.title": "TAs extra",
+	"anima.ui.combat.baseValues.extraReducedArmor.title": "TAs reducidas extra",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
   "anima.ui.combat.finalArmor.title": "Armadura final",
@@ -133,6 +138,13 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2M FUE req.",
   "anima.ui.combat.weapons.title": "Armas",
   "anima.ui.combat.weapons.weaponStrength.title": "FUE Arma",
+	"anima.ui.combat.weapon.damageCalculation.title": "Cálculo de daño base",
+	"anima.ui.combat.weapon.attribute.title": "Característica",
+	"anima.ui.combat.weapon.baseDamageCalculationType.default.title": "Por defecto",
+	"anima.ui.combat.weapon.baseDamageCalculationType.presence.title": "Presencia",
+	"anima.ui.combat.weapon.baseDamageCalculationType.doublePresence.title": "Doble de Presencia",
+	"anima.ui.combat.weapons.extraReducedArmor.title": "Reducción de TA extra",
+	"anima.ui.combat.weapons.ignoreArmor.title": "Ignora armadura",
   "anima.ui.contactSection.contactRow.description": "Descripción",
   "anima.ui.contactSection.contactRow.name": "Nombre",
   "anima.ui.contactSection.title": "Contactos",
