--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -19,6 +19,7 @@
   "anima.ui.characteristics.power": "Pouvoir",
   "anima.ui.characteristics.strength": "Force",
   "anima.ui.characteristics.willPower": "Volonté",
+  "anima.ui.characteristics.none": "-",
   "anima.ui.combat.ammo.amount.title": "Quantité",
   "anima.ui.combat.ammo.breaking.base.title": "Base fracassement",
   "anima.ui.combat.ammo.breaking.title": "Fracassement",
@@ -74,12 +75,16 @@
   "anima.ui.combat.armors.type.title": "Type",
   "anima.ui.combat.armors.wearArmorRequirement.base.title": "Base de Port d'Armure Req.",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Port d'Armure Req.",
+	"anima.ui.combat.armors.isInmodifiable.title": "¿Es Inmodificable?",
   "anima.ui.combat.baseValues.attack.title": "Attaque",
   "anima.ui.combat.baseValues.block.title": "Parade",
   "anima.ui.combat.baseValues.dodge.title": "Esquive",
   "anima.ui.combat.baseValues.extraDamage.title": "Dommages accrus",
   "anima.ui.combat.baseValues.title": "Valeurs de Base",
   "anima.ui.combat.baseValues.wearArmor.title": "Port d'Armure",
+  "anima.ui.combat.baseValues.incomingDamageReduction.title": "Reducción de Daño",
+	"anima.ui.combat.baseValues.extraArmor.title": "TAs extra",
+	"anima.ui.combat.baseValues.extraReducedArmor.title": "TAs reducidas extra",
   "anima.ui.combat.combatSpecialSkill.title": "Compétences Spéciales",
   "anima.ui.combat.combatTables.title": "Tables des Combats",
   "anima.ui.combat.finalArmor.title": "Armure Finale",
@@ -133,6 +138,13 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2 M FOR req.",
   "anima.ui.combat.weapons.title": "Armes",
   "anima.ui.combat.weapons.weaponStrength.title": "FOR Arme",
+	"anima.ui.combat.weapon.damageCalculation.title": "Cálculo daño base",
+	"anima.ui.combat.weapon.attribute.title": "Característica",
+	"anima.ui.combat.weapon.baseDamageCalculationType.default.title": "Por defecto",
+	"anima.ui.combat.weapon.baseDamageCalculationType.presence.title": "Presencia",
+	"anima.ui.combat.weapon.baseDamageCalculationType.doublePresence.title": "Doble de Presencia",
+	"anima.ui.combat.weapons.extraReducedArmor.title": "Reducción de TA extra",
+	"anima.ui.combat.weapons.ignoreArmor.title": "Ignora armadura",
   "anima.ui.contactSection.contactRow.description": "Description",
   "anima.ui.contactSection.contactRow.name": "Nom",
   "anima.ui.contactSection.title": "Contacts",
