new-mystic-dialogs-act-shield-prepared

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -277,8 +277,8 @@
   "anima.ui.mystic.mysticShields.value.title": "Puntos de vida",
   "anima.ui.mystic.mysticShields.name.title": "Escudo",
   "anima.ui.mystic.mysticShields.title": "Escudos Sobrenaturales",
-  "anima.ui.mystic.preparedSpells.prepared.title": "Preparado ?",
-  "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acc",
+  "anima.ui.mystic.preparedSpells.prepared.title": "Prep?",
+  "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acm",
   "anima.ui.mystic.preparedSpells.grade.title": "Grado",
   "anima.ui.mystic.preparedSpells.name.title": "Conjuro",
   "anima.ui.mystic.preparedSpells.title": "Conjuros preparados",
@@ -569,6 +569,16 @@
   "dialogs.items.title.content": "Nombre del título",
   "dialogs.items.weapons.content": "Nombre del arma",
   "dialogs.mod.content": "Modificador",
+  "dialogs.psychicShield.difficulty.special": "Realizar Tirada",
+  "dialogs.psychicShield.difficulty.title": "Dificultad",
+  "dialogs.psychicShield.power.title": "Poder",
+  "dialogs.spellGrade.advanced.title": "Avanzado",
+  "dialogs.spellGrade.arcane.title": "Arcano",
+  "dialogs.spellGrade.base.title": "Base",
+  "dialogs.spellGrade.intermediate.title": "Intermedio",
+  "dialogs.spellGrade.title": "Grado del hechizo",
+  "dialogs.spell.title": "Hechizo",
+  "dialogs.actVia.title": "Via / Subvia",
   "dialogs.title": "Diálogo",
   "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
