--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -277,7 +277,7 @@
   "anima.ui.mystic.mysticShields.value.title": "Life points",
   "anima.ui.mystic.mysticShields.name.title": "Shield",
   "anima.ui.mystic.mysticShields..title": "Supernatural shields",
-  "anima.ui.mystic.preparedSpells.prepared.title": "Prepared ?",
+  "anima.ui.mystic.preparedSpells.prepared.title": "Prep?",
   "anima.ui.mystic.preparedSpells.zeonAcc.title": "Zeon Acc",
   "anima.ui.mystic.preparedSpells.grade.title": "Grade",
   "anima.ui.mystic.preparedSpells.name.title": "Spell",
@@ -569,6 +569,16 @@
   "dialogs.items.title.content": "Title name",
   "dialogs.items.weapons.content": "Weapon name",
   "dialogs.mod.content": "Modifier",
+  "dialogs.psychicShield.difficulty.special": "Dice Roll",
+  "dialogs.psychicShield.difficulty.title": "Difficulty",
+  "dialogs.psychicShield.power.title": "Power",
+  "dialogs.spellGrade.advanced.title": "Advanced",
+  "dialogs.spellGrade.arcane.title": "Arcane",
+  "dialogs.spellGrade.base.title": "Base",
+  "dialogs.spellGrade.intermediate.title": "Intermediate",
+  "dialogs.spellGrade.title": "Spell grade",
+  "dialogs.spell.title": "Spell",
+  "dialogs.actVia.title": "Via / Subvia",
   "dialogs.title": "Dialog",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
