psichic-discipline-imbalance-control

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -368,6 +368,7 @@
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalty",
   "anima.ui.psychic.mentalPattern.title": "Mental Patterns",
   "anima.ui.psychic.psychicDiscipline.title": "Psychic Disciplines",
+  "anima.ui.psychic.psychicDiscipline.name.imbalance": "Psy. Imb.",
   "anima.ui.psychic.psychicShields.shieldPoints.title": "Life points",
   "anima.ui.psychic.psychicShields.name.title": "Shield",
   "anima.ui.psychic.psychicShields.title": "Supernatural shields",
@@ -388,6 +389,11 @@
   "anima.ui.psychic.psychicPowers.discipline.energy.title": "Energy",
   "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Telemetry",
   "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sentient",
+  "anima.ui.psychic.psychicPowers.discipline.causality.title": "Causality",
+  "anima.ui.psychic.psychicPowers.discipline.electromagnetism.title": "Electromagnetism",
+  "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Teleportation",
+  "anima.ui.psychic.psychicPowers.discipline.light.title": "Light",
+  "anima.ui.psychic.psychicPowers.discipline.hipersensibilidad.title": "Hypersensitivity",
   "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
@@ -572,6 +578,8 @@
   "dialogs.psychicShield.difficulty.special": "Dice Roll",
   "dialogs.psychicShield.difficulty.title": "Difficulty",
   "dialogs.psychicShield.power.title": "Power",
+  "dialogs.psychicDiscipline.imbalance.title": "Psychic Imbalance?",
+  "dialogs.psychicDiscipline.title": "Psychic Discipline",
   "dialogs.spellGrade.advanced.title": "Advanced",
   "dialogs.spellGrade.arcane.title": "Arcane",
   "dialogs.spellGrade.base.title": "Base",
