--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -368,6 +368,7 @@
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalizador",
   "anima.ui.psychic.mentalPattern.title": "Patrones Mentales",
   "anima.ui.psychic.psychicDiscipline.title": "Disciplinas Psíquicas",
+  "anima.ui.psychic.psychicDiscipline.name.imbalance": "Des. Psq.",
   "anima.ui.psychic.psychicShields.shieldPoints.title": "Puntos de vida",
   "anima.ui.psychic.psychicShields.name.title": "Escudo",
   "anima.ui.psychic.psychicShields.title": "Escudos Sobrenaturales",
@@ -388,6 +389,11 @@
   "anima.ui.psychic.psychicPowers.discipline.energy.title": "Energía",
   "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Telemetría",
   "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sentiente",
+  "anima.ui.psychic.psychicPowers.discipline.causality.title": "Causalidad",
+  "anima.ui.psychic.psychicPowers.discipline.electromagnetism.title": "Electromagnetismo",
+  "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Teletransporte",
+  "anima.ui.psychic.psychicPowers.discipline.light.title": "Luz",
+  "anima.ui.psychic.psychicPowers.discipline.hipersensibilidad.title": "Hipersensibilidad",
   "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
@@ -572,6 +578,8 @@
   "dialogs.psychicShield.difficulty.special": "Realizar Tirada",
   "dialogs.psychicShield.difficulty.title": "Dificultad",
   "dialogs.psychicShield.power.title": "Poder",
+  "dialogs.psychicDiscipline.imbalance.title": "Desequilibrio Psíquico?",
+  "dialogs.psychicDiscipline.title": "Disciplina Psíquica",
   "dialogs.spellGrade.advanced.title": "Avanzado",
   "dialogs.spellGrade.arcane.title": "Arcano",
   "dialogs.spellGrade.base.title": "Base",
