--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -337,7 +337,7 @@
   "anima.ui.mystic.summoning.title": "Convocation",
   "anima.ui.mystic.tabs.main": "Principal",
   "anima.ui.mystic.tabs.secondaries": "Sorts",
-	"anima.ui.mystic.tabs.invocations": "Invocaciones",
+	"anima.ui.mystic.tabs.summons": "Invocaciones",
   "anima.ui.mystic.zeon.accumulated.title": "Accumulés",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zéon",
