--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -329,7 +329,9 @@
   "anima.ui.mystic.spellMaintenance.name.title": "Spell / Creature",
   "anima.ui.mystic.spellMaintenance.title": "Daily maintenances",
   "anima.ui.mystic.spells.title": "Spells",
-  "anima.ui.mystic.summon.title": "Summons",
+  "anima.ui.mystic.summons.title": "Summons",
+	"anima.ui.mystic.summon.difficulty.title": "Dificultad",
+	"anima.ui.mystic.summon.cost.title": "Coste",
   "anima.ui.mystic.summoning.banish.title": "Banish",
   "anima.ui.mystic.summoning.bind.title": "Bind",
   "anima.ui.mystic.summoning.control.title": "Control",
