--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -343,7 +343,9 @@
 	"anima.ui.mystic.spellMaintenance.name.title": "Conjuro / Criatura",
 	"anima.ui.mystic.spellMaintenance.title": "Mantenimientos diarios",
 	"anima.ui.mystic.spells.title": "Conjuros",
-	"anima.ui.mystic.summon.title": "Invocaciones",
+	"anima.ui.mystic.summons.title": "Invocaciones",
+	"anima.ui.mystic.summon.difficulty.title": "Dificultad",
+	"anima.ui.mystic.summon.cost.title": "Coste",
 	"anima.ui.mystic.summoning.banish.title": "Desconvocar",
 	"anima.ui.mystic.summoning.bind.title": "Atar",
 	"anima.ui.mystic.summoning.control.title": "Dominar",
