--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -329,7 +329,9 @@
   "anima.ui.mystic.spellMaintenance.name.title": "Conjuration / Créature",
   "anima.ui.mystic.spellMaintenance.title": "Maintiens quotidiens",
   "anima.ui.mystic.spells.title": "Conjurations",
-  "anima.ui.mystic.summon.title": "Invocations",
+  "anima.ui.mystic.summons.title": "Invocations",
+	"anima.ui.mystic.summon.difficulty.title": "Dificultad",
+	"anima.ui.mystic.summon.cost.title": "Coste",
   "anima.ui.mystic.summoning.banish.title": "Révoquer",
   "anima.ui.mystic.summoning.bind.title": "Lier",
   "anima.ui.mystic.summoning.control.title": "Dominer",
