--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -490,6 +490,10 @@
   "dialogs.accept": "Accepter",
   "dialogs.cancel": "Annuler",
   "dialogs.continue": "Continuer",
+  "dialogs.migrations.title": "Migration available",
+  "dialogs.migrations.content": "A migration is about to start. To prevent data loss, please back up your data folder befor applying the migration. kAre you ready to continue?",
+  "dialogs.migrations.success":"Migration #{version} <em>\"{title}\"</em> has been successfully applied.",
+  "dialogs.migrations.error": "Migration #{version} has failed to apply:<br>{error}",
   "dialogs.items.advantage.content": "Nom de l'Avantage",
   "dialogs.items.ammo.content": "Nom des Munitions",
   "dialogs.items.armors.content": "Nom de l'Armure",
