specificAttacks-and-resistance-overhauled

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -529,6 +529,9 @@
   "anima.ui.weapons.two-handed.title": "two handed",
   "chat.combatResult.counter.title": "{defender} can counterattack with <b>{bonus}</b> of bonus",
   "chat.combatResult.damage.title": "{defender} takes <b>{damage}</b> damage points",
+  "chat.combatResult.characteristic.title": "<b>{winner}</b> wins the features showdown by <b>{result}</b> points",
+  "chat.combatResult.resist.success.title": "{defender} overcomes resistance against <b>{resistCheck}</b> points",
+  "chat.combatResult.resist.failure.title": "{defender} fails resistance against <b>{resistCheck}</b> points",
   "chat.combatResult.title": "Combat result",
   "contextualMenu.common.options.delete": "Delete",
   "contextualMenu.common.options.edit": "Edit",
@@ -611,8 +614,10 @@
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
+  "macros.combat.dialog.rollCharacteristicButton.title": "Roll Characteristic",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "This option will execute a new roll from the defender",
+  "macros.combat.dialog.rollCharacteristicButtonTooltip.title": "This option will execute a new roll opposed roll of characteristics",
   "macros.combat.dialog.zeonAccumulated.title": "Zeon accumulated",
   "macros.combat.dialog.castInnate.title": "Cast innate spell",
   "macros.combat.dialog.castPrepared.title": "Cast prepared spell",
@@ -671,6 +676,7 @@
   "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
   "macros.combat.dialog.physicalDefense.resist.title": "Try to resist the attack from {target}",
+  "macros.combat.dialog.physicalDefense.characteristic.title": "Is facing {target}",
   "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target} with {potential} potential",
   "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
@@ -698,6 +704,12 @@
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
   "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Waiting for attacker sent the attack...",
+  "macros.combat.dialog.specificAttack.title": "Specific Attack",
+  "macros.combat.dialog.specificAttack.causeDamage.title": "Apply Damage?",
+  "macros.combat.dialog.specificAttack.none.title": "-",
+  "macros.combat.dialog.specificAttack.knockDown.title": "Knock Down",
+  "macros.combat.dialog.specificAttack.disarm.title": "Disarm",
+  "macros.combat.dialog.specificAttack.immobilize.title": "Immobilize",
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
