specificAttacks-and-resistance-overhauled

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -530,6 +530,9 @@
   "anima.ui.weapons.two-handed.title": "A dos manos",
   "chat.combatResult.counter.title": "{defender} puede contrarrestar con un bono de <b>{bonus}</b> puntos",
   "chat.combatResult.damage.title": "{defender} recibe <b>{damage}</b> puntos de daño",
+  "chat.combatResult.characteristic.title": "<b>{winner}</b> gana el enfrentamiento de características por <b>{result}</b> puntos",
+  "chat.combatResult.resist.success.title": "{defender} supera la resistencia contra <b>{resistCheck}</b> puntos",
+  "chat.combatResult.resist.failure.title": "{defender} falla la resistencia contra <b>{resistCheck}</b> puntos",
   "chat.combatResult.title": "Resultado del combate",
   "contextualMenu.common.options.delete": "Eliminar",
   "contextualMenu.common.options.edit": "Editar",
@@ -614,8 +617,10 @@
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
+  "macros.combat.dialog.rollCharacteristicButton.title": "Tirada de Característica",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "Esta opción enviara una tirada de resistencia",
+  "macros.combat.dialog.rollCharacteristicButtonTooltip.title": "Esta opción enviara una tirada enfrentada de características",
   "macros.combat.dialog.zeonAccumulated.title": "Zeon acumulado",
   "macros.combat.dialog.castInnate.title": "Lanzar conjuro innato",
   "macros.combat.dialog.castPrepared.title": "Lanzar conjuro preparado",
@@ -677,6 +682,7 @@
   "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
   "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir el ataque de {target}",
+  "macros.combat.dialog.physicalDefense.characteristic.title": "Se enfrenta a {target}",
   "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
   "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
@@ -704,6 +710,12 @@
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
   "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Esperando al atacante para enviar petición de defensa...",
+  "macros.combat.dialog.specificAttack.title": "Ataque específico",
+  "macros.combat.dialog.specificAttack.causeDamage.title": "¿Aplicar Daño?",
+  "macros.combat.dialog.specificAttack.none.title": "-",
+  "macros.combat.dialog.specificAttack.knockDown.title": "Derribo",
+  "macros.combat.dialog.specificAttack.disarm.title": "Desarmar",
+  "macros.combat.dialog.specificAttack.immobilize.title": "Presa",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
