--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -583,6 +583,11 @@
   "dialogs.psychicShield.power.title": "Power",
   "dialogs.psychicDiscipline.imbalance.title": "Psychic Imbalance?",
   "dialogs.psychicDiscipline.title": "Psychic Discipline",
+  "dialogs.castSpell.override.title": "Do not validate",
+  "dialogs.castSpell.innate.title": "Innate",
+  "dialogs.castSpell.prepared.title": "Prepared",
+  "dialogs.castSpell.accumulated.title": "Accumulated",
+  "dialogs.castSpell.title": "Cast Spell",
   "dialogs.spellGrade.advanced.title": "Advanced",
   "dialogs.spellGrade.arcane.title": "Arcane",
   "dialogs.spellGrade.base.title": "Base",
