--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -583,6 +583,11 @@
   "dialogs.psychicShield.power.title": "Poder",
   "dialogs.psychicDiscipline.imbalance.title": "Desequilibrio Psíquico?",
   "dialogs.psychicDiscipline.title": "Disciplina Psíquica",
+  "dialogs.castSpell.override.title": "No validar",
+  "dialogs.castSpell.innate.title": "Innato",
+  "dialogs.castSpell.prepared.title": "Preparado",
+  "dialogs.castSpell.accumulated.title": "Acumulado",
+  "dialogs.castSpell.title": "Lanzar conjuro",
   "dialogs.spellGrade.advanced.title": "Avanzado",
   "dialogs.spellGrade.arcane.title": "Arcano",
   "dialogs.spellGrade.base.title": "Base",
